--- a/imgvis-8.ipynb
+++ b/imgvis-8.ipynb
@@ -1,6 +1,138 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pylab inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import astropy.io.fits as afits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "fits = glob.glob('*.fits')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y\n",
+      "i\n",
+      "z\n",
+      "g\n",
+      "r\n"
+     ]
+    }
+   ],
+   "source": [
+    "data=[]\n",
+    "for fit in fits:\n",
+    "    print(fit[37])\n",
+    "    data.append(afits.open(fit)[0].data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x117f8ca58>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQsAAAD8CAYAAABgtYFHAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAGw1JREFUeJzt3X+MHOd93/H3Z++OR1GUI1G/wFIE\nJNtsaqVoKIGVBbgIXCuNZaEAZcAO5D9swRXANJUBG0iLygmQOEUNJEVtoQZSBTSkmk4cy6pkQ0Sg\nNJFlBYbRWjLlyPpFy2Ik1aJJi7UlS2IokXe73/4xz94Nl7u3z+7O7I/j5wUsdnd2Zp/ZvZ3PPc8z\nz8woIjAz66cx6RUws9ngsDCzLA4LM8visDCzLA4LM8visDCzLLWFhaTrJT0r6ZCk2+oqx8zGQ3WM\ns5A0B/wI+FfAYeB7wEci4pnKCzOzsairZnENcCgino+IU8DdwO6ayjKzMZiv6X23AS+Vnh8G3t1r\n5g1ajI2cW9OqmBnAG7z6s4i4eNjl6woLdZl2WntH0h5gD8BGNvFuXVfTqpgZwDfj3v87yvJ1NUMO\nA9tLzy8DjpRniIi9EbErInYtsFjTaphZVeoKi+8BOyRdIWkDcBOwv6ayzGwMammGRMSypE8Afw3M\nAXdFxNN1lGVm41FXnwUR8QDwQF3vb2bj5RGcZpbFYWFmWRwWZpbFYWFmWRwWZpbFYWFmWRwWZpbF\nYWFmWRwWZpbFYWFmWRwWZpaltmNDzGxMVDp9TI2XI3XNwmwd0NwcqN7N2WFhZlncDDGbdRFEs1l7\nMQ4Ls/Wgxr6KNjdDzCyLw8LMsjgszCyLw2KSpNP3kZtNMYfFpEhofgHNLzgwbCZ4b8ikRBDLSyuP\nzabdSGEh6UXgDaAJLEfELklbgK8BlwMvAr8ZEa+OtprrlEPCZkgVzZB/GRE7I2JXen4b8FBE7AAe\nSs/NbMbV0WexG9iXHu8DbqyhDDMbs1HDIoC/kfRYuio6wKURcRQg3V8yYhlmNgVG7eB8T0QckXQJ\n8KCkH+YumMJlD8BGNo24GmZWt5FqFhFxJN0fA74BXAO8LGkrQLo/1mPZvRGxKyJ2LbA4ymqYWVlN\nu+KHDgtJ50o6r/0Y+A3gKWA/cHOa7Wbg/lFX0swGUNNetlGaIZcC31CRYvPAX0TE/5L0PeAeSbcA\nPwY+PPpqmtmkDR0WEfE88Ktdpv8cuG6UlTKz6ePh3maWxWFhZlkcFmaWxWFRNx+GbuuEw8KmjwN2\nKvkQ9br5yNLBSKAGaohoBbTqP2v1zBnTRYU6uWZh0yUColUEhfVW8wWFunHNwqZPBIRrFD1N6Ptx\nzcLMsjgszCyLw8LMsjgszCyLw8LMsjgszCyLw2KaeSSjTRGHxTTz6E+bIg6LaefAsCnhsDCzLA4L\nM8visDCzLA4LM8visDCzLH3DQtJdko5Jeqo0bYukByU9l+4vSNMl6QuSDkl6QtLVda68mY1PTs3i\nS8D1HdNuAx6KiB3AQ+k5wAeAHem2B7ijmtU0s0nrGxYR8W3glY7Ju4F96fE+4MbS9C9H4bvA+e3r\nnprZbBu2z+LSiDgKkO4vSdO3AS+V5jucppnZjKv6tHrdDmToOgRR0h6Kpgob2VTxaphZ1YatWbzc\nbl6k+2Np+mFge2m+y4Aj3d4gIvZGxK6I2LXA4pCrYWbjMmxY7AduTo9vBu4vTf9Y2ityLfBau7li\nZrOtbzNE0leB9wIXSToM/AHwR8A9km4Bfgx8OM3+AHADcAg4AXy8hnU2swnoGxYR8ZEeL13XZd4A\nbh11pcxs+qy/EZw+YYxZLdZfWIDPAWFWg/UXFg6K3kapcbVrbN3eoz2t/NpaZbnmN5PWX1jY6Ua9\niG5nQHR7j/a08mu9ynJQzCyHxXomDRYQnRtyvw272/x9l2mcPq/DY2Y4LNaDnCp/eePs1lzodt8t\naHq9R/t5xNrNkmilC/vGmfPbVHNYrAfljbqzyVDeGMsb6Vrv021j76VfbaQdJJ3ltqeVX+tVnsNk\nKlR9bIhNUq+NvL1Rdv1P36MmUNW6dJbRKaefw53WU8E1i/Vg0L6FQZatQq/aR2eTxn0YU81hMYs6\nawKd/7ln7T9xuTlSrgU5OKaKw2LWdduoZmUj69ZHUg7A8ms2cQ6LaZPbpJjlmkTbIM2j3AFfVhuH\nxbRZa8Pvt7dgVkOjn869Kev1c045h8WsyBlg5f+4ViOHxSwoj0k4W/XbvXs2fzdj4rCYBWdzUHQO\nOOs2ZqRzPquFw2IWnK1BAd07Oh0ME+ERnNPsbA6Jtfh7mQiHha2tfZRotFYft5/bWcVhYaeHQO48\nnc/HGR6dx7O4WTIWDotpVXdVOycghn2/uoOj2xGrVjt3cE6rOjeCqoOi2/u3b7WV4d3J49b3rynp\nLknHJD1VmvYZST+R9Hi63VB67dOSDkl6VtL761rxdavuA6jqDopu5dUVHg6Kscr5630JuL7L9Nsj\nYme6PQAg6UrgJuBX0jL/XdJcVSt7VqjjAKqVU9mt04qkj1Adi76/noj4NvBK5vvtBu6OiJMR8QLF\nlcmuGWH9zg51HpI9ZFCoob638nwDrU/VoeV+i7EY5a/2CUlPpGbKBWnaNuCl0jyH0zRbS/s8DlPS\nBs/d+MvzDRwaxUKDzd/zfWo405edYdi/1h3AO4CdwFHgc2l6t79W19iXtEfSAUkHljg55GpYVTpr\nDGMosNq9JuXmm0OjFkOFRUS8HBHNiGgBX2S1qXEY2F6a9TLgSI/32BsRuyJi1wKLw6zG+lL1jzyz\nup8dEJmdlAM3SapS3o3qZkkthvprSdpaevpBoL2nZD9wk6RFSVcAO4BHR1tFG0hVIbHWXoxpDgyr\nTd9BWZK+CrwXuEjSYeAPgPdK2knRxHgR+C2AiHha0j3AM8AycGtENOtZdRtWz415kA23zyCsdhnR\nmtB/+fVwJrEpo5iCL/Jt2hLv1nWTXo3xq3pgUWaNInvZfjWEziDo0QeRHRhV9GGUR3au9zOIDeib\nce9jEbFr2OU93HuSxrz3o2/zYNTOzR6dlmOtZXQ787lVwmFxlhi26aEeYRYRp4dLOwjKR6l2WYc1\nA6PKPSQOicqt0yF9M6Tzup/DqOk4jF5B0fW1ce1yzdF5Ni3vTq2EaxaT0q2/Ypgf9LD9FJ3LlQdY\nldej0fv9BdAqagIrNY0+NYy+tYsq9Dvlno9WHYrDYlI6T21fU1BkLdceut0ZEmuFRgqJ9nS1Wqc3\nTcqhMUhgVNUUWeucFw6KoTgs1rmhOjXLwdAREiuBMjdXhEOrNfDGN7aOznLzzrWJkTksJmkMxzRE\nK9YOjFZ0DwwJGg0013EgWqmpoWiBRDSbxby9miSdb91v70hVtYvyHhEHxcjcwTkJk/wRr9FXUTxf\nbX6s1CLUgLl0m59ffbwSIKffr9UxOhHTtj4zyjWLSSgf9FRzWJxRq+g88W4vjUYRJPPzoAbasAAb\nFmhe9DYax99Cb54k3nwLToGaTaLUPCECmqWBu11qCmMd2dl5jhDXMobisJikSRySXg6KXntAOheZ\naxCbNnL8yot46V8H5x08jwufWWLTD18umiBQfJZ2/0WrfxNiLHtF2usF7rOogJshs2yYdv2wfQHz\ncywcb3LVL7/I8bc3efPCOWKhqHX0HGMxytiLKsaNOCgq5bA4m5X+s68cI1SuHbQCmi2i2YLlJnMn\nlnnyf7+Tc1+cY8PxNF+jGPCk1CHatlJT6REYfWsVVXZwWiXcDJmkKn7MuX0Q3fT5zx/NZtHn0Wqi\nE2+x8NMm77ivRWu+wfzrb6F/eLNohjTX2LAHbWqM8nm6WetCyq5tDMRhMUndRhaOU6/dprDan9IK\noEksL6NWi8arx5lrBSwtE0tLRVDk1AJyd4dWfQatlfctdW46KIbisJgGkxpn0TG93RRRaXRmNJsQ\nDXTyJKEGnDpVnCexFcVG3VlzmNaqf7cRnN3W1SHSk8NiGtS4V2Tkc2qm/osApIA4c7BVRPQfWzFI\nbaGO2kW5NuGaxVAcFtOg24FPg4RHbju/NAqzvXF3O/lRtxoGzWZRo1jpuGx0Xaa9ERZDwdvTVjf8\n7N2lowbGWs2NlaNSG2ih2ARiabme5s864rCYFuUf9TC1jJzAaAjNzaFN56CFhaLP4UTqpOyyEUf7\n7ZrNMw8ya7WKId7t0Gk2V2shPf5rnxEU7Y2z23pXdTBZHyvrvzrBtY4evOt00joPUR+lOdJlA4vO\nQ8bn5uD8t9G65AJ07qbV3Z7ddOxajc52f6u12u9RrlF0LHvaenSqIyhyOo6j6HOJ5eVi13CvZW2F\naxaT1tmOrrGDUCkYWhdsprlpnoXlFvysz8XmOjf6Bqs1jUYjVd87Rm2Wl0kbfteDxzqDoqpmwACH\npBcjUH1O6RwOi2kwjitqRYsIQbNJ49XjNE5sQK//Q5caQ6k507nxqrGyuzUiVvs06FGjmOY+gM6z\nf7v50ZfDYtKqrlF06btY2X3aCmJ5GY4eK6ZHrPZXlDfsXht5+71TIES5mMyQqPXEN4Ns7J3zOij6\n6ttnIWm7pIclHZT0tKRPpulbJD0o6bl0f0GaLklfkHQoXQv16ro/xEyr+kfaY4OLdiA0m8SpJeLk\nyaIJ0Wz23UB7btytWL31kTW8e9SayLSO8Vgncjo4l4HfiYh3AdcCt0q6ErgNeCgidgAPpecAH6C4\nEtkOYA/FdVGtn6rObZGzwbXnyTxs/LTaQL/3X6OTNVoxWEfnMBwYten7F4qIoxHx/fT4DeAgxZXR\ndwP70mz7gBvT493Al6PwXeD8jssd2oS0N9Zet7UGcJ32WrsWUK4N9KgZZI2rqKJW0cmhUbmB4lzS\n5cBVwCPApRFxFIpAAS5Js20DXiotdjhNs1zjqmGcscjp//mzagQ9yuq7TN3cB1G57LCQtBm4D/hU\nRLy+1qxdpp3xl5O0R9IBSQeWOJm7GutX51mcJnhF8PKG3i08+i03UEjUedCYVSorLCQtUATFVyLi\n62nyy+3mRbo/lqYfBraXFr8MONL5nhGxNyJ2RcSuBRaHXf/1o/PCOG0VD9IaVWd4DBUQq29Q4Zp1\n8IWFKpezN0TAncDBiPh86aX9wM3p8c3A/aXpH0t7Ra4FXms3V6yPOk7gW0N/wFDh0Kdvw6ZfzjiL\n9wAfBZ6U9Hia9rvAHwH3SLoF+DHw4fTaA8ANwCHgBPDxStf4bFDHf8RuA6zGpdvel7oDw30Wlesb\nFhHxHbr3QwBc12X+AG4dcb3ObqMeVJZdTsVnpbJ1zSM4p1Xd7e3O//b9QqNcExgkYNzkWDccFtNk\nDAeT9TRKGNR1QNgofKxH5VwHnRY9D6OewA++c2Pv9nyc/Q82FRwW06DznBadjycVGIPsuXBgrHtu\nhkyrWahC96uB2LrisJgGOcEwrj0k64n7LSrlZsis8QaQZ1L9PeuYaxazole/xnq11rU9cpe1Srlm\nMQvKHZ25B5jN+gYz0KUQ4vTb2azGY2Jcs5glObWL9bSx5P7o3TQ7Uw170lyzGNQkjmYc5D9n+eS/\ng3aczpoJHsY/dXr9Liv8vbpmMYhp6CtYa5Rnt9Pfd5u3sz9gUqNGh+ET7a4643QGPf73Ryv9bkYr\nzjWLWdNrYxnmYr9n84a23qSgUEMrt6q5ZjGIadq4el3kd9hgmGTtIqfsafrup40aaG6ueLhxEc3P\np7O4nyou91DRdVwdFrOuyo1olN2VVZQ9SK3ICuWLXc/P09hyPrF5Ezp+Al57HU4tFcFRwUXX3Ayx\nyWl32PbqhHNQZFFDNBYXaWy5gBc+up2T/+1NDu25DC6+EG06pwiUCs5b4rCw7ureUNcKiXGUP+vS\n96aGiiBYmCc2beStHW+xd8dfcMFV/4/W284pLoRdUf+FmyF2pkE31GH6OxwS1WoFOrXE5ic28ptb\n/g2v/WgLW078vLjiXEWXZHBYWG+9NtxuYzg6Ly68Vnh0HhQ3yb6SGVdcHKpVXMP2jeNs++tXaP6f\nc7jkxOtw7OfEWycrO0myw8IGV+Vgr5w9ObamaAW8dRKWltCPl5iHtBdkiWi2KrvYk8PCquONfXxW\nanKtlYthx3Kr9HK6YHWF5xhxWJjNqlJgRBNQgzi11DFPa3XeEXlviNl60Xle1AqDAvKuSLZd0sOS\nDkp6WtIn0/TPSPqJpMfT7YbSMp+WdEjSs5LeX8mamtmZOg8uPONkytU1DXOaIcvA70TE9yWdBzwm\n6cH02u0R8V/LM0u6ErgJ+BXgHwHflPSPI6oYQ2ZmXY2hv6hvzSIijkbE99PjN4CDwLY1FtkN3B0R\nJyPiBYrLGF5Txcqa2eQM1Gch6XLgKuCRNOkTkp6QdJekC9K0bcBLpcUO0yVcJO2RdEDSgSVODrzi\nZjZe2WEhaTNwH/CpiHgduAN4B7ATOAp8rj1rl8XPqCNFxN6I2BURuxZYHHjFzWy8ssJC0gJFUHwl\nIr4OEBEvR0QzIlrAF1ltahwGtpcWvww4Ut0qm9kk5OwNEXAncDAiPl+avrU02weBp9Lj/cBNkhYl\nXQHsAB6tbpXNbBJy9oa8B/go8KSkx9O03wU+ImknRRPjReC3ACLiaUn3AM9Q7Em51XtCzGZf37CI\niO/QvR/igTWW+Szw2RHWy8ymjEdwmlkWh4WZZXFYmFkWh4WZZXFYmFkWh4WZZXFYmFkWh4WZZXFY\nmFkWh4WZZXFYmFkWh4WZZXFYmFkWh4WZZXFYmFkWh4WZZXFYmFkWh4WZZXFYmFkWh4WZZXFYmFkW\nh4WZZcm5yNBGSY9K+oGkpyX9YZp+haRHJD0n6WuSNqTpi+n5ofT65fV+BBuZul3pwex0OTWLk8D7\nIuJXKa5rer2ka4E/Bm6PiB3Aq8Ataf5bgFcj4p3A7Wk+m3YOjOk0RX+XvmERhePp6UK6BfA+4N40\nfR9wY3q8Oz0nvX5dugSimQ0qzrim+MTkXhh5Ll268BjwIPD3wC8iYjnNchjYlh5vA14CSK+/BlzY\n5T33SDog6cASJ0f7FDaaiKn6Udp0ygqLdLX0nRRXRL8GeFe32dJ9t1rEGb/EiNgbEbsiYtcCi7nr\na2YTMtDekIj4BfC3wLXA+ZLa10q9DDiSHh8GtgOk138JeKWKlTWzycnZG3KxpPPT43OAXwcOAg8D\nH0qz3Qzcnx7vT89Jr38rwnVcs1nX9yrqwFZgn6Q5inC5JyL+UtIzwN2S/jPwd8Cdaf47gT+TdIii\nRnFTDettZmPWNywi4gngqi7Tn6fov+ic/hbw4UrWzsymhkdwmlkWh4WZZXFYmFkWh4WZZXFYmFkW\nh4WZZXFYmFkWh4WZZXFYmFkWh4WZZXFYmFkWh4WZZXFYmFkWh4WZZXFYmFkWh4WZZXFYmFmWsycs\nfOkSs5HknINztpVDovzY5xA2G8j6DYvOmoRKlahoOTjMBrQ+myE9gkINnfa85/xmdob1V7M4rdnR\nQA2h+XlopMAAaLVonVpana9d03ANw6ynnIsMbZT0qKQfSHpa0h+m6V+S9IKkx9NtZ5ouSV+QdEjS\nE5KurvtD9Fz3htDiItq4iM7ZiDadUzzfsIHGxkW0sP6y0qwuOVvLSeB9EXFc0gLwHUl/lV77DxFx\nb8f8HwB2pNu7gTvSff202sxQQzQ2nwvz8+jcTcTCPCzMw3ITLS3DG8fR0jKtZpNodizvGobZGXIu\nMhTA8fR0Id3W2pp2A19Oy31X0vmStkbE0ZHXdi3q6I+Ym0MbN8I5G2lu2Uxr4wJLm+dpLAdzby6z\n8NMGnHgTTpwololWratnNuuy6uHp0oWPAe8E/iQiHpH028BnJf0+8BBwW0ScBLYBL5UWP5ymHe14\nzz3AnvT0+Dfj3p8DPxv6k3TGV7NU4vN9l75opLJH47Jd9rj88igLZ4VFRDSBnekCyd+Q9E+BTwM/\nBTYAe4H/CPwnUh9i51t0ec+9aTkAJB2IiF0Df4IKuGyXfbaUPcryA+06jYhfAH8LXB8RR6NwEvgf\nrF739DCwvbTYZcCRUVbSzCYvZ2/IxalGgaRzgF8Hfihpa5om4EbgqbTIfuBjaa/ItcBrtfdXmFnt\ncpohW4F9qd+iAdwTEX8p6VuSLqZodjwO/Ns0/wPADcAh4ATw8cx12dt/ltq4bJftsvtQeDehmWVY\nn8O9zaxyEw8LSddLejaN+LxtDOW9KOnJNOr0QJq2RdKDkp5L9xdUVNZdko5Jeqo0rWtZVY987VH2\nZyT9pDTq9obSa59OZT8r6f0jlr1d0sOSDqZRv59M02v/7GuUXftnX2O08xWSHkmf+2uSNqTpi+n5\nofT65TWUXd1I64iY2A2YA/4eeDvFLtgfAFfWXOaLwEUd0/4LxTgRgNuAP66orF8Drgae6lcWRT/P\nX1H0AV0LPFJD2Z8B/n2Xea9M3/0icEX6m8yNUPZW4Or0+DzgR6mM2j/7GmXX/tnT+m9OjxeAR9Ln\nuQe4KU3/U+C30+N/B/xpenwT8LURPnevsr8EfKjL/AN/55OuWVwDHIqI5yPiFHA3xQjQcdsN7EuP\n91Hs3RlZRHwbeCWzrJWRrxHxXeD89h6nCsvuZTdwd0ScjIgXKDqnr+mzzFplH42I76fHbwAHKQbm\n1f7Z1yi7l8o+e1r/bqOd3we0D4vo/Nzt7+Ne4Lq0d7HKsnsZ+DufdFj0Gu1ZpwD+RtJjKkaRAlwa\nafduur+kxvJ7lTWu7+ITqdp5V6m5VVvZqWp9FcV/urF+9o6yYQyfXdKcpMeBY8CDFDWVX0TEcpf3\nXyk7vf4acGFVZUdE+3N/Nn3u2yUtdpbdZb26mnRYZI32rNh7IuJqigPebpX0azWXl2sc38UdwDuA\nnRSD4T9XZ9mSNgP3AZ+KiNfXmrXq8ruUPZbPHhHNiNhJMRjxGuBda7x/rWVrdaT1PwH+ObCFYqT1\nUGVPOizGPtozIo6k+2PANyj+oC9rdZDZVopkrkuvsmr/LiLi5fSDagFfpMZRtyqOUL4P+EpEfD1N\nHstn71b2OD97Kq892vlaiip+e0xT+f1Xyk6v/xL5TcecsisdaT3psPgesCP1Fm+g6OTZX1dhks6V\ndF77MfAbFCNP9wM3p9luBu6vax3WKKv2ka8dbdIPcvqo25tS7/wVFKcXeHSEcgTcCRyMiM+XXqr9\ns/cqexyfXd1HOx8EHgY+lGbr/Nzt7+NDwLci9T5WVHa1I62H7X2t6kbRK/sjirbd79Vc1tsper5/\nADzdLo+infgQ8Fy631JReV+lqPIuUST5Lb3KoqgW/kn6Hp4EdtVQ9p+l934i/Vi2lub/vVT2s8AH\nRiz7X1BUaZ+gGN37ePo71/7Z1yi79s8O/DPg71IZTwG/X/rdPUrRefo/gcU0fWN6fii9/vYayv5W\n+txPAX/O6h6Tgb9zj+A0syyTboaY2YxwWJhZFoeFmWVxWJhZFoeFmWVxWJhZFoeFmWVxWJhZlv8P\naRf4i5kKhi0AAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x117ad6c18>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "imshow(data[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
